<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbol_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления %s</string>
    <string name="Price">Цена:</string>
    <string name="min_day">Минимум за день:</string>
    <string name="max_day">Максимум за день:</string>
    <string name="last_deal">Последняя сделка:</string>
    <string name="Update">Обновлено:</string>
    <string name="valueDeal">Объем сделки:</string>
    <string name="VolumeByDay">Объем за день:</string>
</resources>